--- a/awesome-bootstrap-checkbox.css
+++ b/awesome-bootstrap-checkbox.css
@@ -1,13 +1,13 @@
-.checkbox {
+.awesome-checkbox {
   padding-left: 20px;
 }
-.checkbox label {
+.awesome-checkbox label {
   display: inline-block;
   vertical-align: middle;
   position: relative;
   padding-left: 5px;
 }
-.checkbox label::before {
+.awesome-checkbox label::before {
   content: "";
   display: inline-block;
   position: absolute;
@@ -22,7 +22,7 @@
   -o-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
   transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
 }
-.checkbox label::after {
+.awesome-checkbox label::after {
   display: inline-block;
   position: absolute;
   width: 16px;
@@ -35,25 +35,25 @@
   font-size: 11px;
   color: #555555;
 }
-.checkbox input[type="checkbox"],
-.checkbox input[type="radio"] {
+.awesome-checkbox input[type="checkbox"],
+.awesome-checkbox input[type="radio"] {
   opacity: 0;
   z-index: 1;
   cursor: pointer;
 }
-.checkbox input[type="checkbox"]:focus + label::before,
-.checkbox input[type="radio"]:focus + label::before {
+.awesome-checkbox input[type="checkbox"]:focus + label::before,
+.awesome-checkbox input[type="radio"]:focus + label::before {
   outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
-.checkbox input[type="checkbox"]:checked + label::after,
-.checkbox input[type="radio"]:checked + label::after {
+.awesome-checkbox input[type="checkbox"]:checked + label::after,
+.awesome-checkbox input[type="radio"]:checked + label::after {
   font-family: "FontAwesome";
   content: "\f00c";
 }
-.checkbox input[type="checkbox"]:indeterminate + label::after,
-.checkbox input[type="radio"]:indeterminate + label::after {
+.awesome-checkbox input[type="checkbox"]:indeterminate + label::after,
+.awesome-checkbox input[type="radio"]:indeterminate + label::after {
   display: block;
   content: "";
   width: 10px;
@@ -63,23 +63,23 @@
   margin-left: -16.5px;
   margin-top: 7px;
 }
-.checkbox input[type="checkbox"]:disabled,
-.checkbox input[type="radio"]:disabled {
+.awesome-checkbox input[type="checkbox"]:disabled,
+.awesome-checkbox input[type="radio"]:disabled {
   cursor: not-allowed;
 }
-.checkbox input[type="checkbox"]:disabled + label,
-.checkbox input[type="radio"]:disabled + label {
+.awesome-checkbox input[type="checkbox"]:disabled + label,
+.awesome-checkbox input[type="radio"]:disabled + label {
   opacity: 0.65;
 }
-.checkbox input[type="checkbox"]:disabled + label::before,
-.checkbox input[type="radio"]:disabled + label::before {
+.awesome-checkbox input[type="checkbox"]:disabled + label::before,
+.awesome-checkbox input[type="radio"]:disabled + label::before {
   background-color: #eeeeee;
   cursor: not-allowed;
 }
-.checkbox.checkbox-circle label::before {
+.awesome-checkbox.checkbox-circle label::before {
   border-radius: 50%;
 }
-.checkbox.checkbox-inline {
+.awesome-checkbox.checkbox-inline {
   margin-top: 0;
 }
 
